Todas atividades de PI

--- a/chart.js/Dashboard.html
+++ b/chart.js/Dashboard.html
@@ -49,7 +49,11 @@
         options: { 
             scales: {
                 y: {
-                    beginAtZero: true
+                    min: 20,
+                    max:90,
+                    ticks:{
+                        stepSize: 10
+                    }
                 }
             }
         }
